[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/technical/WaveSpawnHandler.gd" type="Script" id=1]
[ext_resource path="res://src/technical/WaveHandler.gd" type="Script" id=2]
[ext_resource path="res://art/kenney_particle1.1/star_06.png" type="Texture" id=3]
[ext_resource path="res://art/kenney_particle1.1/star_04.png" type="Texture" id=4]
[ext_resource path="res://art/kenney_particle1.1/star_05.png" type="Texture" id=5]
[ext_resource path="res://art/kenney_particle1.1/star_08.png" type="Texture" id=6]
[ext_resource path="res://art/kenney_particle1.1/star_07.png" type="Texture" id=7]

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 5
fps = 10.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 6 )
frame_4/delay_sec = 0.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.294118 )

[sub_resource type="RectangleShape2D" id=1]

[node name="WaveSpawnHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="WaveMaxLength" type="Timer" parent="."]

[node name="WaveBetweenSpawnDelay" type="Timer" parent="."]

[node name="WaveSpawnLocations" type="Node2D" parent="."]

[node name="WaveSpawnPosition1" type="Position2D" parent="WaveSpawnLocations"]

[node name="SpawnParticles" type="CPUParticles2D" parent="WaveSpawnLocations/WaveSpawnPosition1"]
emitting = false
amount = 32
lifetime = 0.5
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, -15 )
damping = 5.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="WaveSpawnPosition2" type="Position2D" parent="WaveSpawnLocations"]

[node name="SpawnParticles" type="CPUParticles2D" parent="WaveSpawnLocations/WaveSpawnPosition2"]
emitting = false
amount = 32
lifetime = 0.5
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, -15 )
damping = 5.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="WaveSpawnPosition3" type="Position2D" parent="WaveSpawnLocations"]

[node name="SpawnParticles" type="CPUParticles2D" parent="WaveSpawnLocations/WaveSpawnPosition3"]
emitting = false
amount = 32
lifetime = 0.5
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, -15 )
damping = 5.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="WaveSpawnPosition4" type="Position2D" parent="WaveSpawnLocations"]

[node name="SpawnParticles" type="CPUParticles2D" parent="WaveSpawnLocations/WaveSpawnPosition4"]
emitting = false
amount = 32
lifetime = 0.5
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, -15 )
damping = 5.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="WaveSpawnPosition5" type="Position2D" parent="WaveSpawnLocations"]

[node name="SpawnParticles" type="CPUParticles2D" parent="WaveSpawnLocations/WaveSpawnPosition5"]
emitting = false
amount = 32
lifetime = 0.5
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, -15 )
damping = 5.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="WaveSpawnPosition6" type="Position2D" parent="WaveSpawnLocations"]

[node name="SpawnParticles" type="CPUParticles2D" parent="WaveSpawnLocations/WaveSpawnPosition6"]
emitting = false
amount = 32
lifetime = 0.5
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, -15 )
damping = 5.0
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="WaveTriggerArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="WaveTriggerCollisionZone" type="CollisionShape2D" parent="WaveTriggerArea"]
shape = SubResource( 1 )

[node name="WaveHandlerContainer" type="Node2D" parent="."]

[node name="WaveHandler1" type="Node2D" parent="WaveHandlerContainer"]
script = ExtResource( 2 )
[connection signal="body_entered" from="WaveTriggerArea" to="." method="_on_WaveTriggerArea_body_entered"]
